# semantic-memory

./: .gitignore  README.md  pyproject.toml
semantic_memory/: list_utils.py  memory.py  taxonomy.py  vsm.py  vsm_utils.py
tests/: test_semantic_memory.py
